authenticating database users and creating save user endpoint

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,7 @@ field.items-order.required=Order cannot be created without itens.
 field.name.required=Field name is required
 field.description.required=Field Description is mandatory
 field.price.required=Price field is required
+
+
+field.login.required = Login field is mandatory
+field.password.required = Password field is mandatory
